--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html>
 	<head>
-		<title>Arjun Devarajan</title>
+		<title>Arjun Devarjan</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<!-- 1. Load webcomponents-lite.min.js for polyfill support. -->
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
