Git checkup pt 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html>
 	<head>
-		<title>Arjun Devarjan</title>
+		<title>Arjun Devarajan</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<!-- 1. Load webcomponents-lite.min.js for polyfill support. -->
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div class = "Header" id = "Header">
-			<h2>Arjun Devarajan</h2>
+			<h2>Arjun Devjan</h2>
 			<img src="Me.jpg" height="250" width="250" alt="Picture of Me">
 			<p>Native of Cary, NC</p>
 		</div>
