--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div class = "Header" id = "Header">
-			<h2>Arjun Devjan</h2>
+			<h2>Arjun Devarajan</h2>
 			<img src="Me.jpg" height="250" width="250" alt="Picture of Me">
 			<p>Native of Cary, NC</p>
 		</div>
@@ -34,7 +34,7 @@
 			</p>
 
 			<p>
-				I'm 19 years old and I still know pretty much nothing, but I'm doing everything I can to learn more and more. I'm a second-year physics and computer science student at the most hateable university in America (Coach K does a good job) and I'm trying to make life multiplanetary.
+				I'm 19 years old and I still know pretty much nothing, but I'm doing everything I can to learn more and more. I'm a second-year computer science and physics student at the most hateable university in America (Coach K does a good job) and I'm trying to make life multiplanetary.
 			</p>
 
 			<p>
