--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p>
 				Pick your favorite pet animal
 				<select>
-					<option>Dog</option>
+					<option><a href="www.google.com">Dog</a></option>
 					<option>Cat</option>
 					<option>Fish</option>
 					<option value="best animal">Octopus</option>
@@ -71,12 +71,18 @@
 				Here are a few of the things I'm interested in learning about: 
 			</p>
 			<ul>
-				<li><a href="https://www.youtube.com/watch?v=IyuBylcPJi0">Artificial Intelligence</a></li>
+				<!-- <li><a href="https://www.youtube.com/watch?v=IyuBylcPJi0">Artificial Intelligence</a></li>
 				<li><a href="https://www.youtube.com/watch?v=aThCr0PsyuA">Augmented Reality</a></li>
 				<li><a href="https://www.youtube.com/user/arjund98">Filmmaking</a></li>
 				<li><a href="Data+ Final Poster.pdf">Solar Energy</a></li>
 				<li><a href="https://www.youtube.com/watch?v=sNhhvQGsMEc">Space Exploration</a></li>
-				<li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li>
+				<li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li> -->
+				<li>Artificial Intelligence</li>
+				<li>Augmented Reality</li>
+				<li>Filmmaking</li>
+				<li>Solar Energy</li>
+				<li>Space Exploration</li>
+				<li>Youtube Video Education</li>
 			</ul>
 		</div>
 
