--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 			</p>
 
 			<p>
-				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">. 
+				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr>.
+
+				<!-- This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">.  -->
 			</p>
 
 			<p>
 				Pick your favorite pet animal
 				<select>
-					<option><a href="www.google.com">Dog</a></option>
+					<option>Dog</option>
 					<option>Cat</option>
 					<option>Fish</option>
 					<option value="best animal">Octopus</option>
