--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</p>
 
 			<p>
-				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr>.
+				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr> (hover over HTML to see what it means). <q>There are two types of quotes in HTML</q>, <blockquote cite="Volyoome">q and blockquote</blockquote>
 
 				<!-- This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">.  -->
 			</p>
