--- a/index.html
+++ b/index.html
@@ -1,97 +1,206 @@
-<!-- Arjun Devarajan -->
-<!-- Started: October 3, 2015 -->
-<!-- Last Updated: March 7, 2016 -->
-<!-- My first website! -->
-
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
-	<head>
-		<title>Arjun Devarajan</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-		<div class = "Header" id = "Header">
-			<h2>Arjun Devarajan</h2>
-			<img src="Me.jpg" height="250" width="250" alt="Picture of Me">
-			<p>Native of Cary, NC</p>
-		</div>
+<head>
 
-		<div class = "Links">
-			<p>
-				More information can be found <a href="Arjun Devarajan Resume.pdf">here</a>. If you really find that interesting, I guess you could look <a href="https://www.linkedin.com/in/arjundevarajan">here</a>, <a href="https://twitter.com/ArjunDevarajan">here</a>, or even <a href="https://instagram.com/arjdevarj/">here</a> to find out more about me. 
-			</p>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-			<p>
-				I'm 19 years old and I still know pretty much nothing, but I'm doing everything I can to learn more and more. I'm a second-year computer science and physics student at the most hateable university in America (Coach K does a good job) and I'm trying to make life multiplanetary.
-			</p>
+    <title>4 Col Portfolio - Start Bootstrap Template</title>
 
-			<p>
-				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr> (hover over HTML to see what it means). <q>There are two types of quotes in HTML</q>, <blockquote cite="Volyoome">q and blockquote</blockquote>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-				<!-- This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">.  -->
-			</p>
+    <!-- Custom CSS -->
+    <link href="css/4-col-portfolio.css" rel="stylesheet">
 
-			<p>
-				Pick your favorite pet animal
-				<select>
-					<option>Dog</option>
-					<option>Cat</option>
-					<option>Fish</option>
-					<option value="best animal">Octopus</option>
-				</select>
-			</p>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-			<p></p>
+</head>
 
-			<table>
-				<tr>
-					<td>Category</td>
-					<td>Me</td>
-					<td>My friend</td>
-				</tr>
-				<tr>
-					<td>Favorite movie</td>
-					<td>Inception</td>
-					<td>Not Inception</td>
-				</tr>
-				<tr>
-					<td>Favorite meal</td>
-					<td>Paneer</td>
-					<td>Not paneer</td>
-				</tr>
-				<tr>
-					<td>Favorite text editor</td>
-					<td>Sublime</td>
-					<td>Not sublime</td>
-				</tr>
-			</table>
-		</div>
+<body>
 
-		<div class="Interests">
-			<p>
-				Here are a few of the things I'm interested in learning about: 
-			</p>
-			<ul>
-				<!-- <li><a href="https://www.youtube.com/watch?v=IyuBylcPJi0">Artificial Intelligence</a></li>
-				<li><a href="https://www.youtube.com/watch?v=aThCr0PsyuA">Augmented Reality</a></li>
-				<li><a href="https://www.youtube.com/user/arjund98">Filmmaking</a></li>
-				<li><a href="Data+ Final Poster.pdf">Solar Energy</a></li>
-				<li><a href="https://www.youtube.com/watch?v=sNhhvQGsMEc">Space Exploration</a></li>
-				<li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li> -->
-				<li>Artificial Intelligence</li>
-				<li>Augmented Reality</li>
-				<li>Filmmaking</li>
-				<li>Solar Energy</li>
-				<li>Space Exploration</li>
-				<li>Youtube Video Education</li>
-			</ul>
-		</div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-		<div class = "Disclaimer">
-			<p>
-				DISCLAIMER: THIS WEBSITE IS CURRENTLY UNDER RECONSTRUCTION. 
-			</p>
-		</div>
-	</body>
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Heading -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Page Heading
+                    <small>Secondary Text</small>
+                </h1>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Pagination -->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
