--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     
     <link rel="stylesheet" type="text/css" href="fa-snapchat.css">
 
+    <link rel="stylesheet" href="font-mfizz/font-mfizz.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -77,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
-                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf">resume</a>, <a href="https://github.com/arjundevarajan">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan">LinkedIn</a> can be found here.</p>
+                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf">résumé</a>, <a href="https://github.com/arjundevarajan">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan">LinkedIn</a> can be found here.</p>
                     
                     <!-- <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p> -->
                 </div>
@@ -98,54 +100,57 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
+                                <span class="fa-stack 
+                                fa-4x">
+                                <!-- <i class="icon-python"></i> -->
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa icon-python fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Python</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <!-- <i class="icon-java-bold"></i> -->
+                                <i class="fa icon-java-bold fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Java</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-android fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Android</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Experience developing Android applications for startups</p>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-rocket fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Physics</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Understanding and ability to apply basic mechanics and electromagnetism concepts</p>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                     </div>
@@ -159,11 +164,11 @@
     </section>
 
     <!-- Callout -->
-    <aside class="callout">
+<!--     <aside class="callout">
         <div class="text-vertical-center">
             <h1>Vertically Centered Text</h1>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
@@ -173,37 +178,67 @@
                     <h2>My Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <div class="portfolio-item">
                                 <a href="http://bigdata.duke.edu/projects/solar-power-estimation">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <div class="portfolio-item">
                                 <a href="https://github.com/arjundevarajan/pacman">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="http://sifronb.com/hd/">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="row">
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="http://bigdata.duke.edu/projects/solar-power-estimation">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="https://github.com/arjundevarajan/pacman">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
                             <div class="portfolio-item">
                                 <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="sifronb.com/hd/">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -213,7 +248,7 @@
     </section>
 
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
+<!--     <aside class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -223,7 +258,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Map -->
 <!--     <section id="contact" class="map">
@@ -237,7 +272,7 @@
 
     <!-- Footer -->
     <footer>
-        <section id="contact" div class="container">
+        <section id="contact" class="services bg-primary" div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Arjun Devarajan</strong>
@@ -245,23 +280,23 @@
                     <p>205 Alexander Ave., Apartment Z<br>Durham, NC 27705</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (919) 352-6525</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">ard38@duke.edu</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com" class="text">ard38@duke.edu</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://instagram.com/arjdevarj/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <a href="https://twitter.com/ArjunDevarajan"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <a href="#arjdevarj"><i class="fa fa-snapchat fa-3x"></i></a>
+                            <abbr title="@arjdevarj"><a href="#arjdevarj"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Arjun Devarajan 2016</p>
+                    <p class="text-muted text">Copyright &copy; Arjun Devarajan 2016</p>
                 </div>
             </div>
         </div>
