Updated skill descriptions

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <h4>
                                     <strong>Python</strong>
                                 </h4>
-                                <p></p>
+                                <p>Knowledge of Python artificially intelligent search algorithm implementations</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -108,7 +108,7 @@
                                 <h4>
                                     <strong>Java</strong>
                                 </h4>
-                                <p></p>
+                                <p>Understanding of object-oriented programming practices and various Java data structures and algorithms</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -120,7 +120,7 @@
                                 <h4>
                                     <strong>Android</strong>
                                 </h4>
-                                <p>Experience developing Android applications for startups</p>
+                                <p>Experience developing Android digital health applications for startups</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -132,7 +132,7 @@
                                 <h4>
                                     <strong>Physics</strong>
                                 </h4>
-                                <p>Understanding and ability to apply basic mechanics and electromagnetism concepts to real-life situations</p>
+                                <p>Ability to apply basic mechanics and electromagnetism concepts to real-life situations</p>
                             </div>
                         </div>
                     </div>
