Added About Me button

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="text-vertical-center">
             <h1>Arjun Devarajan</h1>
             <br>
+            <a href="#about" class="btn btn-dark btn-lg">About Me</a>
         </div>
     </header>
 
