Made links more open in new tabs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="text-vertical-center">
             <h1>Arjun Devarajan</h1>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">About Me</a>
+            <a href="#about" class="btn btn-dark btn-lg">Welcome!</a>
         </div>
     </header>
 
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
-                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf">résumé</a>, <a href="https://github.com/arjundevarajan">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan">LinkedIn</a> can be found here.</p>
+                    <h2>Hi, I'm Arjun. I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
+                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf" target="_blank">résumé</a>, <a href="https://github.com/arjundevarajan" target="_blank">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan" target="_blank">LinkedIn</a> can be found here.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -223,13 +223,13 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjdevarj"><a href="#arjdevarj"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><a href="#arjdevarj" target="_blank"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
                         </li>
                     </ul>
                     <hr class="small">
