Revert back to old

--- a/index.html
+++ b/index.html
@@ -155,60 +155,94 @@
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-1">
-                                    <div class="overlay">
-                                        <span class="plus">Solar Power Estimation through Remote Sensing</span>
-                                    </div>
-                                </div>
-                            </a>
+                            <div class="portfolio-item image-div">
+                                <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                </a>
+                            </div>
                         </div>
                         <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/pacman" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-2">
-                                    <div class="overlay">
-                                        <span class="plus">Pacman Artificial Intelligence Search Project</span>
-                                    </div>
-                                </div>
-                            </a>
+                            <div class="portfolio-item">
+                                <a href="https://github.com/arjundevarajan/pacman" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                </a>
+                            </div>
                         </div>
                         <div class="col-md-4">
-                            <a href="http://devpost.com/software/diversity/" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-3">
-                                    <div class="overlay">
-                                        <span class="plus">EcoDiversity: HackDuke Fall 2015 Project</span>
-                                    </div>
-                                </div>
-                            </a>
+                            <div class="portfolio-item">
+                                <a href="http://devpost.com/software/diversity/" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-4">
-                                    <div class="overlay">
-                                        <span class="plus">Big History Project Film Competition</span>
-                                    </div>
-                                </div>
-                            </a>
+                            <div class="portfolio-item">
+                                <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                </a>
+                            </div>
                         </div>
                         <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-5">
-                                    <div class="overlay">
-                                        <span class="plus">Kaggle Machine Learning Competition</span>
-                                    </div>
-                                </div>
-                            </a>
+                            <div class="portfolio-item">
+                                <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-5.jpg">
+                                </a>
+                            </div>
                         </div>
                         <div class="col-md-4">
-                            <a href="http://www.inthecube.org/" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-6">
-                                    <div class="overlay">
-                                        <span class="plus">Leader of The Cube: Duke's Student Incubator</span>
-                                    </div>
+                            <div class="portfolio-item">
+                                <a href="http://www.inthecube.org/" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-6.jpg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-1">
+                                <div class="overlay">
+                                    <span class="plus">Solar Power Estimation through Remote Sensing</span>
                                 </div>
-                            </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-2">
+                                <div class="overlay">
+                                    <span class="plus">ASDF</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-3">
+                                <div class="overlay">
+                                    <span class="plus">+</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-4">
+                                <div class="overlay">
+                                    <span class="plus">+</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-5">
+                                <div class="overlay">
+                                    <span class="plus">ASDF</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box" id="portfolio-6">
+                                <div class="overlay">
+                                    <span class="plus">+</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -228,20 +262,20 @@
                     </h4>
                     <p>205 Alexander Ave., Apartment Z<br>Durham, NC 27705</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i>(919) 352-6525</li>
+                        <li><i class="fa fa-phone fa-fw"></i> (919) 352-6525</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com" class="text">ard38@duke.edu</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank" style= "text-decoration: none"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank" style= "text-decoration: none"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjdevarj"><a href="#arjdevarj" target="_blank" style= "text-decoration: none"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><a href="#arjdevarj" target="_blank"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
                         </li>
                     </ul>
                     <hr class="small">
