--- a/TestingSuite/index.html
+++ b/TestingSuite/index.html
@@ -13,13 +13,13 @@
 	<body>
 		<div class = "Header" id = "Header">
 			<h2>Arjun Devarajan</h2>
-			<img src="Me.jpg" height="250" width="250" alt="Picture of Me">
+			<img src="../Me.jpg" height="250" width="250" alt="Picture of Me">
 			<p>Native of Cary, NC</p>
 		</div>
 
 		<div class = "Links">
 			<p>
-				More information can be found <a href="Arjun Devarajan Resume.pdf">here</a>. If you really find that interesting, I guess you could look <a href="https://www.linkedin.com/in/arjundevarajan">here</a>, <a href="https://twitter.com/ArjunDevarajan">here</a>, or even <a href="https://instagram.com/arjdevarj/">here</a> to find out more about me. 
+				More information can be found <a href="../Arjun Devarajan Resume.pdf">here</a>. If you really find that interesting, I guess you could look <a href="https://www.linkedin.com/in/arjundevarajan">here</a>, <a href="https://twitter.com/ArjunDevarajan">here</a>, or even <a href="https://instagram.com/arjdevarj/">here</a> to find out more about me. 
 			</p>
 
 			<p>
@@ -27,7 +27,7 @@
 			</p>
 
 			<p>
-				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr> (hover over HTML to see what it means). <q>There are two types of quotes in HTML</q>, <blockquote cite="Volyoome">q and blockquote</blockquote>
+				<a href="#Header">This</a> is a link to my name. <a href="../Volyoome/index.html">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr> (hover over HTML to see what it means). <q>There are two types of quotes in HTML</q>, <blockquote cite="Volyoome">q and blockquote</blockquote>
 
 				<!-- This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">.  -->
 			</p>
