--- a/TestingSuite/index.html
+++ b/TestingSuite/index.html
@@ -70,11 +70,11 @@
         </p>
         <ul>
             <!-- <li><a href="https://www.youtube.com/watch?v=IyuBylcPJi0">Artificial Intelligence</a></li>
-				<li><a href="https://www.youtube.com/watch?v=aThCr0PsyuA">Augmented Reality</a></li>
-				<li><a href="https://www.youtube.com/user/arjund98">Filmmaking</a></li>
-				<li><a href="Data+ Final Poster.pdf">Solar Energy</a></li>
-				<li><a href="https://www.youtube.com/watch?v=sNhhvQGsMEc">Space Exploration</a></li>
-				<li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li> -->
+                <li><a href="https://www.youtube.com/watch?v=aThCr0PsyuA">Augmented Reality</a></li>
+                <li><a href="https://www.youtube.com/user/arjund98">Filmmaking</a></li>
+                <li><a href="Data+ Final Poster.pdf">Solar Energy</a></li>
+                <li><a href="https://www.youtube.com/watch?v=sNhhvQGsMEc">Space Exploration</a></li>
+                <li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li> -->
             <li>Artificial Intelligence</li>
             <li>Augmented Reality</li>
             <li>Filmmaking</li>
@@ -82,6 +82,65 @@
             <li>Space Exploration</li>
             <li>Youtube Video Education</li>
         </ul>
+        <p>If you add the line <code><var>givevaderachuckle</var> = true;</code> to the <code>destroy_planet</code> subroutine and then type
+            <kbd>ilovejabba</kbd> into the console, the big bad green Death Star laser will etch
+            <samp>Slug Lover!</samp> on the planet's surface.</p>
+        <pre><code>
+&lt;div id="intro"&gt; &lt;h1&gt;Some heading&lt;/h1&gt; &lt;p&gt;Some paragraph paragraph thing thing thingy.&lt;/p&gt; &lt;/div&gt;
+</code>
+</pre>
+        <h1>Some random glossary thing</h1>
+        <dl>
+            <dt>HTML</dt>
+            <dd>Abbreviation for HyperText Markup Language - a language used to make web pages.</dd>
+            <dt>Dog</dt>
+            <dd>Any carnivorous animal belonging to the family Canidae.</dd>
+            <dd>The domesticated sub-species of the family Canidae, Canis lupus familiaris.</dd>
+            <dt>Moo juice</dt>
+            <dt>Cat beer</dt>
+            <dt>Milk</dt>
+            <dd>A white liquid produced by cows and used for human consumption.</dd>
+        </dl>
+        <h3>Author contact details</h3>
+        <address>
+            <ul>
+                <li>0123-456-7890</li>
+                <li>author_dude@noplaceinteresting.com</li>
+                <li>http://www.noplaceinteresting.com/contactme/</li>
+            </ul>
+        </address>
+        <p>Bob's
+            <dfn title="Dog">canine</dfn> mother and
+            <dfn title="Horse">equine</dfn> father sat him down and carefully explained that he was an
+            <dfn title="A mutation that combines two or more sets of chromosomes from different species">allopolyploid</dfn> organism.</p>
+        <bdo dir="rtl">god lmth</bdo>
+        <p>I have decided to
+            <del datetime="2013-01-26">decrease</del>
+            <ins cite="http://www.icecreamforall.com/changeofpolicy/">increase</ins> the amount of free ice cream that the State will provide for its citizens.</p>
+    </div>
+    <div>
+        <article>
+            <section id="intro">
+                <p>[An introduction]</p>
+            </section>
+            <section id="main_content">
+                <p>[Content]</p>
+            </section>
+            <section id="related">
+                <ul>
+                    <li><a href="that.html">That related article</a></li>
+                    <li><a href="this.html">This related article</a></li>
+                </ul>
+            </section>
+        </article>
+        <nav id="main_nav">
+            <ul>
+                <li><a href="/tutorials/">Tutorials</a></li>
+                <li><a href="/techniques/">Techniques</a></li>
+                <li><a href="/examples/">Examples</a></li>
+                <li><a href="/references/">References</a></li>
+            </ul>
+        </nav>
     </div>
     <div class="Disclaimer">
         <p>
