Fixed unnecessary section

--- a/index.html
+++ b/index.html
@@ -2,62 +2,50 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Arjun Devarajan</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
     <link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.css">
-    
     <link rel="stylesheet" type="text/css" href="fa-snapchat.css">
-
     <link rel="stylesheet" href="font-mfizz/font-mfizz.css">
-
 </head>
 
 <body>
-
     <!-- Navigation -->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); ></a>
+                <a href="#top" onclick=$ ( "#menu-close").click();></a>
             </li>
             <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
+                <a href="#top" onclick=$ ( "#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick = $("#menu-close").click(); >About</a>
+                <a href="#about" onclick=$ ( "#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick = $("#menu-close").click(); >Skills</a>
+                <a href="#services" onclick=$ ( "#menu-close").click();>Skills</a>
             </li>
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >My Projects</a>
+                <a href="#portfolio" onclick=$ ( "#menu-close").click();>My Projects</a>
             </li>
             <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Contact Me</a>
+                <a href="#contact" onclick=$ ( "#menu-close").click();>Contact Me</a>
             </li>
         </ul>
     </nav>
-
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
@@ -66,21 +54,19 @@
             <a href="#about" class="btn btn-dark btn-lg">Welcome!</a>
         </div>
     </header>
-
     <!-- About -->
     <section id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Hi, I'm Arjun. I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
-                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf" target="_blank" style= "text-decoration: none">résumé</a>, <a href="https://github.com/arjundevarajan" target="_blank" style= "text-decoration: none">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan" target="_blank" style= "text-decoration: none">LinkedIn</a> can be found here.</p>
+                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf" target="_blank" style="text-decoration: none">résumé</a>, <a href="https://github.com/arjundevarajan" target="_blank" style="text-decoration: none">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan" target="_blank" style="text-decoration: none">LinkedIn</a> can be found here.</p>
                 </div>
             </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
     </section>
-
     <!-- Services -->
     <section id="services" class="services bg-primary">
         <div class="container">
@@ -146,7 +132,6 @@
         </div>
         <!-- /.container -->
     </section>
-
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
@@ -156,7 +141,7 @@
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank" style= "text-decoration: none">
+                            <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-1">
                                     <div class="overlay">
                                         <span class="plus">Solar Power Estimation through Remote Sensing</span>
@@ -165,7 +150,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/pacman" target="_blank" style= "text-decoration: none">
+                            <a href="https://github.com/arjundevarajan/pacman" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-2">
                                     <div class="overlay">
                                         <span class="plus">Pacman Artificial Intelligence Search Project</span>
@@ -174,7 +159,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="http://devpost.com/software/diversity/" target="_blank" style= "text-decoration: none">
+                            <a href="http://devpost.com/software/diversity/" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-3">
                                     <div class="overlay">
                                         <span class="plus">EcoDiversity: HackDuke Fall 2015 Project</span>
@@ -185,7 +170,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank" style= "text-decoration: none">
+                            <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-4">
                                     <div class="overlay">
                                         <span class="plus">Big History Project Film Competition</span>
@@ -194,7 +179,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank" style= "text-decoration: none">
+                            <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-5">
                                     <div class="overlay">
                                         <span class="plus">Kaggle Machine Learning Competition</span>
@@ -203,7 +188,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="http://www.inthecube.org/" target="_blank" style= "text-decoration: none">
+                            <a href="http://www.inthecube.org/" target="_blank" style="text-decoration: none">
                                 <div class="box" id="portfolio-6">
                                     <div class="overlay">
                                         <span class="plus">Leader of The Cube: Duke's Student Incubator</span>
@@ -219,45 +204,43 @@
         </div>
         <!-- /.container -->
     </section>
-
     <!-- Footer -->
     <footer>
-        <section id="contact" class="services bg-primary" div class="container">
+        <section id="contact" class="services bg-primary" div class="container" style="padding-bottom: 0px">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Arjun Devarajan</strong>
                     </h4>
-                    <p>205 Alexander Ave., Apartment Z<br>Durham, NC 27705</p>
+                    <p>205 Alexander Ave., Apartment Z
+                        <br>Durham, NC 27705</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i>(919) 352-6525</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com" class="text">ard38@duke.edu</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com" class="text">ard38@duke.edu</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank" style= "text-decoration: none"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank" style="text-decoration: none"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank" style= "text-decoration: none"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank" style="text-decoration: none"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
                         </li>
                         <li>
-                            <abbr title="@arjdevarj"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
+                            <abbr title="@arjdevarj"><i class="fa fa-snapchat fa-3x icon"></i></a>
+                            </abbr>
                         </li>
                     </ul>
                     <hr class="small">
                     <p class="text-muted text">Copyright &copy; Arjun Devarajan 2016</p>
                 </div>
             </div>
-        </div>
+            </div>
     </footer>
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Custom Theme JavaScript -->
     <script>
     // Closes the sidebar menu
@@ -289,7 +272,6 @@
         });
     });
     </script>
-
 </body>
 
 </html>
