Changed song of the week

--- a/TestingSuite/maydha.html
+++ b/TestingSuite/maydha.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Yungin' Disney Blog</h1> Maydha and Arjun
     <ul>
-        <li><a target="_blank" href="https://www.youtube.com/watch?v=CVN4LBEm1OQ">Song of the week</a></li>
+        <li><a target="_blank" href="https://www.youtube.com/watch?v=_kZDScT9wz0">Song of the week</a></li>
         <li>Park ride sountrack rankings</li>
         <li>Restaurant reviews</li>
         <li>Monthly tips</li>
